--- a/cards.css
+++ b/cards.css
@@ -17,9 +17,11 @@ button {
     background-color: goldenrod;
     border: .1em solid black;
     width: 3.3em;
+    position: absolute;
 }
 #nr {
     width: 6.6em;
+    position: absolute;
 }
 span {
     width: 3em;
